@@ -554,26 +554,26 @@ typedef struct rcoption {
 #define TOGGLE_NO_KEY		-2
 
 /* Normal toggles. */
-#define TOGGLE_CONST_KEY	NANO_ALT_C
-#define TOGGLE_AUTOINDENT_KEY	NANO_ALT_I
-#define TOGGLE_SUSPEND_KEY	NANO_ALT_Z
 #define TOGGLE_NOHELP_KEY	NANO_ALT_X
-#define TOGGLE_MOUSE_KEY	NANO_ALT_M
-#define TOGGLE_CUTTOEND_KEY	NANO_ALT_K
-#define TOGGLE_WRAP_KEY		NANO_ALT_L
-#define TOGGLE_BACKWARDS_KEY	NANO_ALT_B
-#define TOGGLE_CASE_KEY		NANO_ALT_C
-#define TOGGLE_MULTIBUFFER_KEY	NANO_ALT_F
-#define TOGGLE_DOS_KEY		NANO_ALT_D
-#define TOGGLE_MAC_KEY		NANO_ALT_M
+#define TOGGLE_CONST_KEY	NANO_ALT_C
+#define TOGGLE_MORESPACE_KEY	NANO_ALT_O
 #define TOGGLE_SMOOTH_KEY	NANO_ALT_S
-#define TOGGLE_NOCONVERT_KEY	NANO_ALT_N
-#define TOGGLE_BACKUP_KEY	NANO_ALT_B
+#define TOGGLE_WHITESPACE_KEY	NANO_ALT_P
 #define TOGGLE_SYNTAX_KEY	NANO_ALT_Y
 #define TOGGLE_SMARTHOME_KEY	NANO_ALT_H
-#define TOGGLE_WHITESPACE_KEY	NANO_ALT_P
-#define TOGGLE_MORESPACE_KEY	NANO_ALT_O
+#define TOGGLE_AUTOINDENT_KEY	NANO_ALT_I
+#define TOGGLE_CUTTOEND_KEY	NANO_ALT_K
+#define TOGGLE_WRAP_KEY		NANO_ALT_L
 #define TOGGLE_TABSTOSPACES_KEY	NANO_ALT_Q
+#define TOGGLE_BACKUP_KEY	NANO_ALT_B
+#define TOGGLE_MULTIBUFFER_KEY	NANO_ALT_F
+#define TOGGLE_MOUSE_KEY	NANO_ALT_M
+#define TOGGLE_NOCONVERT_KEY	NANO_ALT_N
+#define TOGGLE_SUSPEND_KEY	NANO_ALT_Z
+#define TOGGLE_CASE_KEY		NANO_ALT_C
+#define TOGGLE_BACKWARDS_KEY	NANO_ALT_B
+#define TOGGLE_DOS_KEY		NANO_ALT_D
+#define TOGGLE_MAC_KEY		NANO_ALT_M
 #endif /* !NANO_TINY */
 
 #define MAIN_VISIBLE 12
