@@ -85,6 +85,9 @@ CVS code -
 - nano.c:
   renumber()
 	- Remove invalid assert. (DLR, found by Filipe Moreira)
+- nano.h:
+	- Reorder the toggle #defines to match their corresponding order
+	  in toggle_init(). (DLR)
 - rcfile.c:
   parse_argument()
 	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
